<resources>
    <string name="app_name">比赛计分器</string>
    <string name="teamA">A队</string>
    <string name="teamB">B队</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>
    <string name="button_add_1">+1</string>
    <string name="button_add_2">+2</string>
    <string name="button_add_3">+3</string>
    <string name="undoButton">Undo</string>
    <string name="resetButton">Reset</string>
</resources>
